--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node-sass": "^3.7.0",
     "postcss-loader": "^0.9.1",
     "react": "^15.1.0",
+    "react-addons-css-transition-group": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "resolve-url-loader": "^1.4.3",
